# mango

./: .gitignore  CREDENTIALS.md  LICENSE  PLEA.md  README.md  emergency-disable-hooks.sh  rename_project.py  setup-hooks.sh  setup-tmux.sh  setup-workflows.sh
.git.old/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
hooks/: HOOKS_REFERENCE.txt  HOOK_MANAGEMENT.md  README.md  auto-lint-python.py  block-all-scripts.py  block-bad-filenames.py  block-cd.py  block-commit-to-main.py  block-dir-and-mv.py  block-error-handling.py  block-error-hiding.py  block-file-versions.py  block-filename-proliferation.py  block-git-stash.py  block-glob-tool.py  block-grep-tool.py  block-head-tail.py  block-homedir-edits.py  block-hook-editing.py  block-md-files.py  block-python-c-inline.py  block-reports-no-images.py  block-rm.py  block-scripts-dirty-git.py  block-scripts-outside-debug.py  block-search-tool.py  block-search-tools.py  block-sed-editing.py  block_dangerous_git.py  configure-hooks.py  enforce-sequential-scripts.py  force-background-bash.py  force-foreground-bash.py  hook_installer.py  hook_manager.py  hook_messages.json  hook_registry.json  hook_selector.py  hook_utils.py  hooks  (+15 more)
mcp/: CASCADE.md  README.md  UNDERSTANDING_MCP.md  (+2 more)
mcp/estimate-mcp/: MCP_CREATION_SUMMARY.md  README.md  install.sh  pyproject.toml
mcp/estimate-mcp/estimate_mcp/: __init__.py  server.py
mcp/estimate-mcp/estimate_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/estimate-mcp/estimate_mcp/tools/: base_tool.py  estimate_tool.py
(+179 files in other folders)
